# Chic

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/src/: CellSimulator  CellSimulator.cpp  MetabolicSimulator.cpp  VesselSimulator  VesselSimulator.cpp  chic_cell_standalone.cxa.rb  chic_cell_vessel.cxa.rb
apps/src/data/: clinical_image_2d.vti  clinical_image_3d.vti  clinical_image_full.vti
scripts/: generate_input_image.py  plot_concentrations.py
src/: CellCycleOde.hpp  CellSimulation.cpp  CellSimulation.hpp  HahnfeldtModelSimulation.cpp  HahnfeldtModelSimulation.hpp  HahnfeldtOdeSystem.cpp  HahnfeldtOdeSystem.hpp  MetabolicSimulation.cpp  MetabolicSimulation.hpp  Simulation.cpp  Simulation.hpp  VesselGrowthOde.hpp  VesselSimulation.cpp  VesselSimulation.hpp
src/io/: InputParser.cpp  InputParser.hpp
src/postprocessing/: PlotHahnfeldtModelSolutions.py
src/python-d6_2/: CellComponent.py  CellComponent.xml  ChemicalComponent.py  ChemicalComponent.xml  ChicCommon.py  LC_Hypermodel.py  LC_Hypermodel_Tests.py  VesselComponent.py  VesselComponent.xml  requirements.txt
test/: CMakeLists.txt  ContinuousTestPack.txt  TestCellCycleOde.hpp  TestCellSimulation.hpp  TestHahnfeldtSimulation.hpp  TestVesselGrowthOde.hpp  TestVesselSimulation.hpp  muscle_config.cxa.rb  standalone_runner.py
